tests/pass/toma_basic.kr
fn inisiu() {
    textu nome = toma();
    mostran(f"Ola, {nome}");
}
