tests/fail/fail_textu_condition.kr
fn inisiu() {
    si "abc" {
        mostran(1);
    }
}
